Progress: work done until sprint 3

--- a/imageGallery.html
+++ b/imageGallery.html
@@ -27,28 +27,28 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="/images/koala_1.jpg">
-    <img src="/images/koala_1.jpg" alt="Fjords" width="300" height="200">
+    <img src="../PSM/images/koala_1.jpg" alt="" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="/images/koala_2.jpg">
-    <img src="/images/koala_2.jpg" alt="Forest" width="300" height="200">
+    <img src="../PSM/images/koala_2.jpg" alt="" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="/images/koala_3.jpg">
-    <img src="/images/koala_3.jpg" alt="Northern Lights" width="300" height="200">
+    <img src="../PSM/images/koala_3.jpg" alt="" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="/images/koala_4.jpg">
-    <img src="/images/koala_4.jpg" alt="Mountains" width="300" height="200">
+    <img src="../PSM/images/koala_4.jpg" alt="" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
