--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@ img {
     <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:15%">
             <h3 class="w3-bar-item">Menu</h3>
   <a href="#" class="w3-bar-item w3-button">Home Page</a>
-  <a href="#" class="w3-bar-item w3-button">Gallery</a>
-  <a href="#" class="w3-bar-item w3-button">Diet Information</a>
-  <a href="#" class="w3-bar-item w3-button">Mating and Reproduction Information</a>
-  <a href="#" class="w3-bar-item w3-button">Habitat Information</a>
-  <a href="#" class="w3-bar-item w3-button">Anatmoy and Biology</a>
-  <a href="#" class="w3-bar-item w3-button">Behavior</a>
+  <a href='index1.html' class="w3-bar-item w3-button">Gallery</a>
+  <a href="#" class="w3-bar-item w3-button"><strike>Diet Information</strike></a>
+  <a href="#" class="w3-bar-item w3-button"><strike>Mating and Reproduction Information</strike></a>
+  <a href="habitat.html" class="w3-bar-item w3-button">Habitat Information</a>
+  <a href="#" class="w3-bar-item w3-button"><strike>Anatmoy and Biology</strike></a>
+  <a href="#" class="w3-bar-item w3-button"><strike>Behavior</strike></a>
 </div>
 	<div id="container" style="margin: 5 auto; ">
       <div class="cardframe">
